--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         </dependency>
 
         <!-- Dependencias de Hadoop Cliente -->
+        <!--
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client-api</artifactId>
@@ -78,6 +79,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client-runtime</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
         <!-- Opcional, si necesitas hadoop-common explícitamente y para evitar conflictos -->
