--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,14 @@
             <version>${hadoop.version}</version>
         </dependency>
         -->
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
-        </dependency>
+        </dependency> -->
         <!-- Opcional, si necesitas hadoop-common explícitamente y para evitar conflictos -->
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
@@ -107,7 +107,7 @@
                     <artifactId>protobuf-java</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency> -->
 
 
         <!-- SLF4J Simple (para logging básico) -->
